overflow issue fix

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
 /*** Spinner Start ***/
 /*** Spinner ***/
+.container {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 #spinner {
   opacity: 0;
   visibility: hidden;
